[gd_scene load_steps=8 format=3 uid="uid://corfont0ulc54"]

[ext_resource type="Texture2D" uid="uid://2kuqfkc8xmej" path="res://Sprites/Characters/YoungMan/YoungMan_Body.svg" id="1_418g6"]
[ext_resource type="Script" path="res://Scripts/Actor_Scripts/Entity_Watcher.gd" id="1_xyp0t"]
[ext_resource type="Texture2D" uid="uid://dr8ekeeufldx6" path="res://Sprites/Lights/Headlight_Texture_Evil.png" id="2_r4du7"]
[ext_resource type="Shader" path="res://Scripts/Shaders/ChromaticChaosDistortion.gdshader" id="3_ibcqt"]

[sub_resource type="Gradient" id="Gradient_lkuic"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.393805, 1)
colors = PackedColorArray(0.75, 0.75, 0.75, 1, 0.267421, 0.278472, 0.281787, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_84wnp"]
gradient = SubResource("Gradient_lkuic")
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vtacd"]
shader = ExtResource("3_ibcqt")
shader_parameter/chaos = 9.0
shader_parameter/radius = 0.325
shader_parameter/attenuation = 1.0

[node name="Entity_Watcher" type="RigidBody2D"]
script = ExtResource("1_xyp0t")
turningSpeed = 8.0
maxChaosDistance = 800.0

[node name="VisibleOn" type="VisibleOnScreenNotifier2D" parent="."]
process_mode = 1

[node name="AnimBeginTimer" type="Timer" parent="."]
one_shot = true

[node name="Flashlight" type="PointLight2D" parent="."]
z_index = 20
position = Vector2(-9, 1.445)
scale = Vector2(0.37037, 0.37037)
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 1.0
texture = ExtResource("2_r4du7")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(36, 0.00013032)
scale = Vector2(15.3818, 15.3818)
color = Color(1, 0.839216, 0.666667, 0.670588)
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 1.0
texture = SubResource("GradientTexture2D_84wnp")
height = 100.0

[node name="Chaos" type="ColorRect" parent="."]
light_mask = 0
z_index = 10
material = SubResource("ShaderMaterial_vtacd")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = -261.0
offset_right = 267.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_418g6")

[connection signal="screen_entered" from="VisibleOn" to="." method="_on_visible_on_screen_entered"]
[connection signal="timeout" from="AnimBeginTimer" to="." method="_on_anim_begin_timer_timeout"]
